syntax = "proto3";
package protos;

import "common.proto";
import "tokenbalance.proto";
import "tokenlog.proto";

message PingResponse {
    CommonResponse CommonResponse = 1;
}

message CreateTokenResponse {
    CommonResponse CommonResponse = 1;
}

message IssueTokenResponse {
    CommonResponse CommonResponse = 1;
}

message TransferTokenResponse {
    CommonResponse CommonResponse = 1;
}

message GetTokenResponse {
    CommonResponse CommonResponse = 1;
    TokenBalancePB Result = 2;
}

message PaginateTokenByUserNameResponse {
    CommonResponse CommonResponse = 1;
    int32 PageSize = 2;
    string BookMark = 3;
    repeated TokenBalancePB Results = 4;
}

message PaginateTokenByTokenNameResponse {
    CommonResponse CommonResponse = 1;
    int32 PageSize = 2;
    string BookMark = 3;
    repeated TokenBalancePB Results = 4;
}

message PaginateTokenLogByFromUserNameResponse {
    CommonResponse CommonResponse = 1;
    int32 PageSize = 2;
    string BookMark = 3;
    repeated TokenLogPB Results = 4;
}

message PaginateTokenLogByToUserNameResponse {
    CommonResponse CommonResponse = 1;
    int32 PageSize = 2;
    string BookMark = 3;
    repeated TokenLogPB Results = 4;
}